<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    
    <!-- Displays equation and answer -->
    <string name="equation_answer_edit_text"></string>
    
    <!-- Number buttons -->
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="zero_button">0</string>
    
    <!-- Operation buttons -->
    <string name="cancel_entry_button">CE</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="mult_button">*</string>
    <string name="div_button">/</string>
    <string name="equals_button">=</string>
    

</resources>
